# CryptCurio

./: .gitignore  CMakeLists.txt  Makefile  README.md  bn.c  bn.h  main.c
.github/workflows/: Build.yml
bi/: Makefile  bi.h  bi_add.c  bi_asm.c  bi_cmp.c  bi_conv.c  bi_div.c  bi_exp.c  bi_mod.c  bi_mul.c  bi_rand.c  bi_shift.c  bi_stdlib.c  main.c
demos/bi/: Makefile  factorial.c  miller_rabin.c
tests/: Makefile  bi_sum_test.c  bi_test.c  test
tests/recipies/bi/: bi_add.txt  bi_div.txt  bi_exp.txt  bi_lshift.txt  bi_lshift1.txt  bi_modmul.txt  bi_modpow.txt  bi_mul.txt  bi_rshift.txt  bi_sqr.txt
testsuite/: CMakeLists.txt  small_positive_add_test.sh  small_positive_div_test.sh  small_positive_mul_test.sh  small_positive_sub_test.sh
